ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/header.scss
/* ... */
    
html[lang=ar] [dir=rtl] .top-nav-section.top-nav a {
	font-size: .6875rem
}

html[lang=ar] [dir=rtl] .top-nav-section.top-nav #top-nav-cart-img,
html[lang=ar] [dir=rtl] .top-nav-section.top-nav .top-nav .links svg {
	margin-left: 0;
	margin-right: 10px
}

html[lang=ar] [dir=rtl] .top-nav-section.top-nav .top-nav-right #top-nav-arrow-img {
	left: 0;
	right: auto
}

html[lang=ar] [dir=rtl] .top-nav-section .top-nav-right {
	text-align: left
}

.top-nav-section {
	font-family: Lato,GE SS Two,Roboto,Arial,sans-serif;
	height: 48px
}

.top-nav-section #top-nav-cart-img,
.top-nav-section .links svg {
	width: 24px;
	height: 24px;
	margin-left: 10px;
	transform: translateZ(0)
}

.top-nav-section .links li {
	display: inline-block
}

.top-nav-section .links li a {
	padding: 0 1rem
}


.top-nav-section .links li a svg {
	stroke: #353738
}

.top-nav-section .links li a .link-icon-wrapper {
	position: relative
}

.top-nav-section .links li a .link-icon-wrapper .link-icon {
	position: absolute;
	top: -8px;
	right: -20px;
	min-width: 14px;
	min-height: 14px;
	height: 14px;
	width: 14px
}

.top-nav-section .top-nav-left .links a {
	font-weight: 800;
	height: 47px
}

.top-nav-section .top-nav-left .links .active>a,
.top-nav-section .top-nav-left .links .active>a:hover,
.top-nav-section .top-nav-left .links a:hover {
	background: transparent;
	border-bottom: 2px solid #719e19;
	color: #719e19;
	height: 47px
}

.top-nav-section .top-nav-right {
	text-align: right
}

.top-nav-section .top-nav-right .links li a {
	padding: 0 1.2rem;
	position: relative;
	cursor: pointer
}

@media (min-width:992px) and (max-width:1366px) {
	.top-nav-section .top-nav-right .links li a {
		padding: 0  toRem(24);
	}
}

.top-nav-section .top-nav-right .links li:last-child a {
	padding-right: 0
}

.top-nav-section .top-nav-right .links .badge-top {
	top: 6px;
	z-index: 99;
	letter-spacing: 0;
	font-weight: 700
}

.top-nav-section .top-nav-right .links .language-switch-content+svg {
	width: 8px;
	height: 5px
}

.top-nav-section .active>a,
.top-nav-section .active>a:focus,
.top-nav-section .active>a:hover,
.top-nav-section a:focus,
.top-nav-section a:hover {
	background: transparent
}

html[lang=ar] [dir=rtl] .top-nav-section .top-nav-right .links li:last-child a {
	padding-left: 0;
	padding-right: 1.5rem
}

html[lang=ar] [dir=rtl] .top-nav-section .top-nav-right .links li:last-child a:hover {
	cursor: pointer
}

html[lang=ar] [dir=rtl] .top-nav-section .top-nav-left .link-icon-wrapper .link-icon {
	left: -20px;
	right: auto
}

@media (max-width:1247px) {
	.top-nav-section .top-nav-right .links {
		display: -ms-flexbox;
		display: flex;
		-ms-flex-pack: end;
		justify-content: flex-end
	}
}

@media (max-width:1247px) {
	.top-nav-section .top-nav-right .links li a .text {
		display: none
	}
}

[lang=ar] [dir=rtl] .top-nav-section #top-nav-cart-img,
[lang=ar] [dir=rtl] .top-nav-section .links svg {
	margin-left: 0;
	margin-right: 10px
}
.fixed-config-section .top-nav-section.top-nav {
	display: none
}

.top-nav.fixedNav {
	top: -1px;
	left: 0;
	z-index: 9000
}

.top-nav .top-nav-main-row {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: justify;
	justify-content: space-between
}

.top-nav .top-nav-channel {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: start;
	justify-content: flex-start
}

.top-nav .top-nav-language {
	display: -ms-flexbox;
	display: flex;
	-ms-flex-pack: end;
	justify-content: flex-end
}

.top-nav a {
	display: inline-block;
	width: 100%;
	height: 48px;
	font-size: .6875rem;
	letter-spacing: .18181818em;
	color: #353738;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-direction: row;
	flex-direction: row;
	-ms-flex-align: center;
	align-items: center;
	-ms-flex-pack: center;
	justify-content: center
}

.top-nav .text-right a {
	-ms-flex-pack: end;
	justify-content: flex-end
}

.top-nav .text-center a {
	-ms-flex-pack: center;
	justify-content: center
}

.top-nav .active>a,
.top-nav .active>a:focus,
.top-nav .active>a:hover,
.top-nav a:focus,
.top-nav a:hover {
	color: #353738;
	transition: all .3s ease-in-out;
	transition: .3s
}

.top-nav #top-nav-store-img {
	width: 14px;
	height: 18px;
	margin-left: 10px
}

.top-nav #top-nav-cart-img,
.top-nav svg {
	width: 24px;
	height: 21px;
	margin-left: 10px
}

.top-nav #top-nav-arrow-img {
	transform: rotate(90deg);
	width: 5px;
	height: 9px;
	margin-left: 10px;
	position: absolute;
	top: 43%;
	right: 10%
}

.top-nav span.language-switch-content {
	font-size: 1rem;
	font-weight: 100;
	font-family: GE SS Two, Arial, sans-serif;
	letter-spacing: 0
}

.top-nav span.badge-top {
	width: 1.31rem;
	height: 1.31rem;
	background-color: #719e19;
	color: $white;
	border-radius: 50%;
	line-height: 1.31rem;
	position: absolute;
	top: 0;
	left: 50%;
	letter-spacing: 2px;
	margin-left: .3rem;
	text-align: center
}

.top-nav .align-cart a>div:first-child {
	margin-right: -10px
}

.top-nav .align-cart a>div:first-child span {
	float: right
}

.top-nav .align-cart a>div:nth-child(2) {
	padding-top: 5px
}


html[lang=ar] [dir=rtl] .top-nav span.language-switch-content {
	font-size: .6875rem
}

html[lang=ar] [dir=rtl] .top-nav a {
	font-size: .875rem
}

html[lang=ar] [dir=rtl] .top-nav span.badge-top {
	right: 50%;
	left: auto;
	margin-right: .15rem;
	margin-left: 0;
	top: .25rem
}
.default-sub-title p {
	font-size: 1.125rem;
	margin: 2rem 0 0;
	line-height: 1.75rem
}

.default-sub-title p,
.default-text {
	color: $steel-grey;
	@include font-family-Neotech-ge;
}
.default-text {
	font-size: .875rem;
	line-height: 1.2rem
}
@media (max-width:768px) {
    .overview-section .default-sub-title p {
		line-height: 20px;
		margin-top: 1.4rem;
		margin-bottom: 1rem;
		font-size: 14px
	}
}
/* ... */

